# Copyright 2026 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//benchmark:benchmark.bzl", "prime_ir_benchmark", "prime_ir_mlir_cc_import")

# ==============================================================================
# Prime Field Benchmarks (supports vectorization)
# ==============================================================================

# Prime field scalar (non-vectorized) version
prime_ir_mlir_cc_import(
    name = "vectorize_scalar_ciface",
    llc_flags = ["-mcpu=native"],
    mlir_src = "vectorize_pf.mlir",
    prime_ir_opt_flags = [
        "-field-to-llvm",
    ],
)

# Generate vectorized prime field source with vec_ prefix to avoid symbol clashes
genrule(
    name = "vectorize_vec_mlir",
    srcs = ["vectorize_pf.mlir"],
    outs = ["vectorize_vec.mlir"],
    cmd = "sed 's/@\\([a-zA-Z0-9_]*\\)(/@vec_\\1(/g' $< > $@",
)

# Prime field vectorized version using affine-super-vectorize
prime_ir_mlir_cc_import(
    name = "vectorize_vec_ciface",
    llc_flags = ["-mcpu=native"],
    mlir_src = ":vectorize_vec_mlir",
    prime_ir_opt_flags = [
        "-affine-super-vectorize=virtual-vector-size=16",
        "-field-to-llvm",
        "-convert-vector-to-llvm",
        "-convert-arith-to-llvm",
    ],
)

# ==============================================================================
# Extension Field Benchmarks (scalar only - vectorization not yet supported)
# ==============================================================================

# Extension field scalar version
prime_ir_mlir_cc_import(
    name = "vectorize_ext_scalar_ciface",
    llc_flags = ["-mcpu=native"],
    mlir_src = "vectorize.mlir",
    prime_ir_opt_flags = [
        "-field-to-llvm",
    ],
)

# Generate extension field source with vec_ prefix (same code, different symbols)
# This is for API compatibility - both scalar and "vectorized" run the same code
genrule(
    name = "vectorize_ext_vec_mlir",
    srcs = ["vectorize.mlir"],
    outs = ["vectorize_ext_vec.mlir"],
    cmd = "sed 's/@\\([a-zA-Z0-9_]*\\)(/@vec_\\1(/g' $< > $@",
)

# Extension field "vectorized" version (currently same as scalar due to bug)
prime_ir_mlir_cc_import(
    name = "vectorize_ext_vec_ciface",
    llc_flags = ["-mcpu=native"],
    mlir_src = ":vectorize_ext_vec_mlir",
    prime_ir_opt_flags = [
        # Note: -affine-super-vectorize crashes for extension fields
        "-field-to-llvm",
    ],
)

prime_ir_benchmark(
    name = "vectorize_benchmark",
    srcs = ["vectorize_benchmark.cc"],
    deps = [
        ":vectorize_ext_scalar_ciface",
        ":vectorize_ext_vec_ciface",
        ":vectorize_scalar_ciface",
        ":vectorize_vec_ciface",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
        "@zk_dtypes//zk_dtypes:babybear4",
        "@zk_dtypes//zk_dtypes:mersenne312",
    ],
)

# ==============================================================================
# Elliptic Curve Benchmarks
# ==============================================================================

# EC scalar version (no vectorization)
prime_ir_mlir_cc_import(
    name = "vectorize_ec_scalar_ciface",
    llc_flags = ["-mcpu=native"],
    mlir_src = "vectorize_ec.mlir",
    prime_ir_opt_flags = [
        "-elliptic-curve-to-field",
        "-field-to-llvm",
    ],
)

# Generate vectorized EC source with vec_ prefix
genrule(
    name = "vectorize_ec_vec_mlir",
    srcs = ["vectorize_ec.mlir"],
    outs = ["vectorize_ec_vec.mlir"],
    cmd = "sed 's/@\\([a-zA-Z0-9_]*\\)(/@vec_\\1(/g' $< > $@",
)

# EC vectorized version
prime_ir_mlir_cc_import(
    name = "vectorize_ec_vec_ciface",
    llc_flags = ["-mcpu=native"],
    mlir_src = ":vectorize_ec_vec_mlir",
    prime_ir_opt_flags = [
        "-affine-super-vectorize=virtual-vector-size=4",
        "-elliptic-curve-to-field",
        "-field-to-llvm",
        "-convert-vector-to-llvm",
        "-convert-arith-to-llvm",
    ],
)

prime_ir_benchmark(
    name = "vectorize_ec_benchmark",
    srcs = ["vectorize_ec_benchmark.cc"],
    deps = [
        ":vectorize_ec_scalar_ciface",
        ":vectorize_ec_vec_ciface",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
        "@zk_dtypes//zk_dtypes:bn254_fr",
        "@zk_dtypes//zk_dtypes:bn254_g1",
    ],
)
