# Copyright 2026 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//benchmark:benchmark.bzl", "prime_ir_benchmark", "prime_ir_mlir_cc_import")

# Regex: @funcname( -> @vec_funcname(
CMD = "sed 's/@\\([a-zA-Z0-9_]*\\)(/@vec_\\1(/g' $< > $@"

# Prime field scalar (non-vectorized) version
prime_ir_mlir_cc_import(
    name = "vectorize_scalar_ciface",
    llc_flags = ["-mcpu=native"],
    mlir_src = "vectorize.mlir",
    prime_ir_opt_flags = [
        "-field-to-llvm=bufferize-function-boundaries=true",
    ],
)

# Generate vectorized prime field source with vec_ prefix to avoid symbol clashes
genrule(
    name = "vectorize_vec_mlir",
    srcs = ["vectorize.mlir"],
    outs = ["vectorize_vec.mlir"],
    cmd = CMD,
)

# Prime field vectorized version using field-to-llvm vectorize option
prime_ir_mlir_cc_import(
    name = "vectorize_vec_ciface",
    llc_flags = ["-mcpu=native"],
    mlir_src = ":vectorize_vec_mlir",
    prime_ir_opt_flags = [
        "-field-to-llvm=bufferize-function-boundaries=true vectorize=true vector-size=16",
    ],
)

prime_ir_benchmark(
    name = "vectorize_benchmark",
    srcs = ["vectorize_benchmark.cc"],
    deps = [
        ":vectorize_scalar_ciface",
        ":vectorize_vec_ciface",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
    ],
)
