# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@llvm-project//mlir:tblgen.bzl", "td_library")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "APIntUtils",
    srcs = ["APIntUtils.cpp"],
    hdrs = ["APIntUtils.h"],
    deps = [
        "@llvm-project//llvm:Support",
    ],
)

cc_library(
    name = "AssemblyFormatUtils",
    srcs = ["AssemblyFormatUtils.cpp"],
    hdrs = ["AssemblyFormatUtils.h"],
    deps = [
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
    ],
)

cc_library(
    name = "BuilderContext",
    hdrs = ["BuilderContext.h"],
    deps = [
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
    ],
)

td_library(
    name = "CommonTraits",
    srcs = ["CommonTraits.td"],
    includes = ["../.."],
    deps = ["@llvm-project//mlir:OpBaseTdFiles"],
)

td_library(
    name = "CommonTypeConstraints",
    srcs = ["CommonTypeConstraints.td"],
    includes = ["../.."],
    deps = ["@llvm-project//mlir:BuiltinDialectTdFiles"],
)

td_library(
    name = "CanonicalizationTd",
    srcs = [
        "AdditiveCanonicalization.td",
        "MultiplicativeCanonicalization.td",
    ],
    includes = ["../.."],
    deps = ["@llvm-project//mlir:OpBaseTdFiles"],
)

cc_library(
    name = "ConstantFolder",
    hdrs = ["ConstantFolder.h"],
    deps = [
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
    ],
)

cc_library(
    name = "CanonicalizationPatterns",
    hdrs = ["CanonicalizationPatterns.inc"],
)

cc_library(
    name = "ControlFlowOperation",
    srcs = ["ControlFlowOperation.cpp"],
    hdrs = ["ControlFlowOperation.h"],
    deps = [
        "//prime_ir/Dialect/Field/IR:Field",
        "//prime_ir/Utils:BuilderContext",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:SCFDialect",
        "@zk_dtypes//zk_dtypes:control_flow_operation_forward",
    ],
)

cc_library(
    name = "ConversionUtils",
    srcs = ["ConversionUtils.cpp"],
    hdrs = ["ConversionUtils.h"],
    deps = [
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:FuncTransforms",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:SCFTransforms",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:TransformUtils",
        "@llvm-project//mlir:ViewLikeInterface",
    ],
)

cc_library(
    name = "KnownModulus",
    srcs = ["KnownModulus.cpp"],
    hdrs = ["KnownModulus.h"],
    deps = [
        ":ZkDtypes",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:Support",
        "@zk_dtypes//zk_dtypes:all_types",
    ],
)

cc_library(
    name = "OpUtils",
    srcs = ["OpUtils.cpp"],
    hdrs = ["OpUtils.h"],
    deps = [
        "@llvm-project//mlir:IR",
    ],
)

cc_library(
    name = "ShapedTypeConverter",
    srcs = ["ShapedTypeConverter.cpp"],
    hdrs = ["ShapedTypeConverter.h"],
    deps = [
        "@llvm-project//mlir:TransformUtils",
    ],
)

cc_library(
    name = "SimpleStructBuilder",
    srcs = ["SimpleStructBuilder.cpp"],
    hdrs = ["SimpleStructBuilder.h"],
    deps = [
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:LLVMCommonConversion",
        "@llvm-project//mlir:LLVMDialect",
    ],
)

cc_library(
    name = "ZkDtypes",
    hdrs = ["ZkDtypes.h"],
    deps = [
        "@zk_dtypes//zk_dtypes:big_int",
    ],
)
