# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_python//python:defs.bzl", "py_library")
load("//prime_ir:symlink_files.bzl", "symlink_inputs")

package(
    default_visibility = ["//visibility:public"],
)

py_library(
    name = "mlir",
    deps = ["//prime_ir/mlir/_mlir_libs"],
)

symlink_inputs(
    name = "core",
    rule = py_library,
    symlinked_inputs = {"srcs": {
        "dialects": ["@llvm-project//mlir/python:DialectCorePyFiles"],
    }},
)

symlink_inputs(
    name = "field",
    rule = py_library,
    symlinked_inputs = {"srcs": {
        "dialects": ["//prime_ir/Dialect/Field/Python:FieldPyFiles"],
    }},
    deps = [
        ":core",
        ":ir",
        ":mlir",
        "//prime_ir/mlir/_mlir_libs:_field",
    ],
)

symlink_inputs(
    name = "ir",
    rule = py_library,
    symlinked_inputs = {"srcs": {
        ".": ["@llvm-project//mlir/python:IRPyFiles"],
    }},
    deps = [":mlir"],
)
