load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "BitSerialAlgorithmTest",
    srcs = ["BitSerialAlgorithmTest.cpp"],
    deps = [
        "//prime_ir/Dialect/Field/IR:Field",
        "//prime_ir/Dialect/ModArith/IR:ModArith",
        "//prime_ir/Utils:BitSerialAlgorithm",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:SCFDialect",
    ],
)
