# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_cuda//cuda:defs.bzl", "requires_cuda")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "cudaRuntimeUtils.so",
    linkshared = True,
    linkstatic = False,
    deps = [":CudaRuntimeUtils"],
)

cc_library(
    name = "CudaRuntimeUtils",
    srcs = ["CudaRuntimeUtils.cu"],
    # By default, arch is sm_35 with clang 18.1.3.
    # "--cuda-gpu-arch=native" yields arch=sm_120.
    # Neither are supported by CUDA 12.9.
    copts = ["--cuda-gpu-arch=sm_80"],
    target_compatible_with = requires_cuda(),
    deps = [
        ":CudaUtils",
        "@cuda//:cub",
        "@cuda//:cuda_runtime",
        "@llvm-project//mlir:mlir_runner_utils",
    ],
    alwayslink = True,
)

cc_library(
    name = "CudaUtils",
    hdrs = ["CudaUtils.h"],
    target_compatible_with = requires_cuda(),
    deps = [
        "@cuda//:cuda_runtime",
        "@llvm-project//llvm:Support",
    ],
)
