load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "PipelineRegistration",
    srcs = ["PipelineRegistration.cpp"],
    hdrs = ["PipelineRegistration.h"],
    deps = [
        "//zkir/Dialect/Field/Conversions/FieldToModArith",
        "//zkir/Dialect/ModArith/Conversions/ModArithToArith",
        "//zkir/Dialect/Poly/Conversions/PolyToField",
        "@llvm-project//mlir:AffineToStandard",
        "@llvm-project//mlir:AffineTransforms",
        "@llvm-project//mlir:ArithTransforms",
        "@llvm-project//mlir:BufferizationToMemRef",
        "@llvm-project//mlir:BufferizationTransforms",
        "@llvm-project//mlir:ConvertToLLVM",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:LinalgTransforms",
        "@llvm-project//mlir:MemRefTransforms",
        "@llvm-project//mlir:OpenMPToLLVM",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:SCFToControlFlow",
        "@llvm-project//mlir:SCFToOpenMP",
        "@llvm-project//mlir:Transforms",
    ],
)
