load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "APIntUtils",
    srcs = ["APIntUtils.cpp"],
    hdrs = ["APIntUtils.h"],
    deps = [
        "@llvm-project//llvm:Support",
    ],
)

cc_library(
    name = "ConversionUtils",
    srcs = ["ConversionUtils.cpp"],
    hdrs = ["ConversionUtils.h"],
    deps = [
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:AffineDialect",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:FuncTransforms",
        "@llvm-project//mlir:FunctionInterfaces",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:SCFTransforms",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:TensorDialect",
        "@llvm-project//mlir:TransformUtils",
        "@llvm-project//mlir:ViewLikeInterface",
    ],
)

cc_library(
    name = "OpUtils",
    srcs = ["OpUtils.cpp"],
    hdrs = ["OpUtils.h"],
    deps = [
        "@llvm-project//mlir:IR",
    ],
)

cc_library(
    name = "ShapedTypeConverter",
    srcs = ["ShapedTypeConverter.cpp"],
    hdrs = ["ShapedTypeConverter.h"],
    deps = [
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:TransformUtils",
    ],
)
