# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "executable_build_options",
    srcs = ["executable_build_options.cc"],
    hdrs = ["executable_build_options.h"],
    deps = [
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:statusor",
        "//zkx:debug_options_flags",
        "//zkx:execution_options_util",
        "//zkx:shape_util",
        "//zkx:zkx_cc_proto",
        "//zkx/pjrt:compile_options_cc_proto",
        "//zkx/pjrt/distributed:key_value_store_interface",
        "//zkx/service:compilation_environments",
        "//zkx/service:computation_placer",
        "//zkx/stream_executor:device_memory_allocator",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "client",
    srcs = ["client.cc"],
    hdrs = ["client.h"],
    deps = [
        ":executable_build_options",
        "//xla/tsl/platform:statusor",
        "//zkx:execution_options_util",
        "//zkx:literal",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:types",
        "//zkx:zkx_cc_proto",
        "//zkx:zkx_data_cc_proto",
        "//zkx/base:logging",
        "//zkx/hlo/builder:zkx_computation",
        "//zkx/service",
        "//zkx/service:hlo_cc_proto",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "local_client",
    srcs = ["local_client.cc"],
    hdrs = ["local_client.h"],
    deps = [
        ":client",
        ":executable_build_options",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:debug_options_flags",
        "//zkx:executable_run_options",
        "//zkx:literal",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/builder:zkx_computation",
        "//zkx/service:backend",
        "//zkx/service:compiler",
        "//zkx/service:computation_layout",
        "//zkx/service:dump",
        "//zkx/service:executable",
        "//zkx/service:local_service",
        "//zkx/service:maybe_owning_device_memory",
        "//zkx/service:service_executable_run_options",
        "//zkx/service:shaped_buffer",
        "//zkx/service:source_map_util",
        "//zkx/service:stream_pool",
        "//zkx/stream_executor",
        "//zkx/stream_executor:device_memory_allocator",
        "//zkx/stream_executor:platform",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "compile_only_client",
    srcs = ["compile_only_client.cc"],
    hdrs = ["compile_only_client.h"],
    deps = [
        ":client",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:zkx_cc_proto",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/builder:zkx_computation",
        "//zkx/service:compile_only_service",
        "//zkx/service:compiler",
        "//zkx/service:hlo_module_config",
        "//zkx/stream_executor",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:span",
        "@llvm-project//llvm:Support",
        "@llvm-project//llvm:TargetParser",
    ],
)

zkx_cc_unittest(
    name = "client_unittests",
    srcs = ["executable_build_options_unittest.cc"],
    deps = [
        ":executable_build_options",
        "//xla/tsl/platform:casts",
        "//xla/tsl/platform:status",
        "//xla/tsl/platform:statusor",
        "//zkx:protobuf_util",
        "//zkx/service:test_compilation_environment_cc_proto",
        "@com_google_absl//absl/status:status_matchers",
    ],
)
