# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "compile_options_proto",
    srcs = ["compile_options.proto"],
    deps = [
        "//zkx:zkx_data_proto",
        "//zkx:zkx_proto",
        "//zkx/stream_executor:device_description_proto",
    ],
)

cc_proto_library(
    name = "compile_options_cc_proto",
    deps = [":compile_options_proto"],
)

proto_library(
    name = "execute_options_proto",
    srcs = ["execute_options.proto"],
)

cc_proto_library(
    name = "execute_options_cc_proto",
    deps = [":execute_options_proto"],
)

proto_library(
    name = "executable_metadata_proto",
    srcs = ["executable_metadata.proto"],
    deps = ["//zkx/service:hlo_proto"],
)

cc_proto_library(
    name = "executable_metadata_cc_proto",
    deps = [":executable_metadata_proto"],
)

zkx_cc_library(
    name = "event_pool",
    srcs = ["event_pool.cc"],
    hdrs = ["event_pool.h"],
    deps = [
        "//xla/tsl/platform:statusor",
        "//zkx/stream_executor",
        "//zkx/stream_executor:event",
        "//zkx/stream_executor:stream",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "tracked_device_buffer",
    srcs = ["tracked_device_buffer.cc"],
    hdrs = ["tracked_device_buffer.h"],
    deps = [
        ":event_pool",
        ":pjrt_client",
        "//xla/tsl/concurrency:async_value",
        "//xla/tsl/platform:env",
        "//xla/tsl/profiler/lib:connected_traceme",
        "//xla/tsl/profiler/lib:context_types",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx/service:executable",
        "//zkx/service:maybe_owning_device_memory",
        "//zkx/service:shaped_buffer",
        "//zkx/stream_executor:device_memory",
        "//zkx/stream_executor:device_memory_allocator",
        "//zkx/stream_executor:event",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "local_device_state",
    srcs = ["local_device_state.cc"],
    hdrs = ["local_device_state.h"],
    deps = [
        ":event_pool",
        ":pjrt_common",
        ":semaphore",
        ":worker_thread",
        "//xla/tsl/profiler/lib:traceme",
        "//xla/tsl/util:env_var",
        "//zkx/client:local_client",
        "//zkx/stream_executor",
        "//zkx/stream_executor:stream",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "exceptions",
    hdrs = ["exceptions.h"],
    deps = [
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
    ],
)

zkx_cc_library(
    name = "host_callback",
    srcs = ["host_callback.cc"],
    hdrs = ["host_callback.h"],
    deps = [
        ":pjrt_client",
        ":pjrt_executable",
        ":pjrt_future",
        "//xla/tsl/platform:status",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "host_memory_spaces",
    srcs = ["host_memory_spaces.cc"],
    hdrs = ["host_memory_spaces.h"],
    deps = [
        ":pjrt_client",
        "//xla/tsl/platform:fingerprint",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "layout_mode",
    srcs = ["layout_mode.cc"],
    hdrs = ["layout_mode.h"],
    deps = [
        "//zkx:shape_util",
        "//zkx/hlo/parser:hlo_parser",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "lru_cache",
    hdrs = ["lru_cache.h"],
    deps = [
        "@com_google_absl//absl/container:node_hash_map",
        "@com_google_absl//absl/log:check",
    ],
)

zkx_cc_library(
    name = "mlir_to_hlo",
    srcs = ["mlir_to_hlo.cc"],
    hdrs = ["mlir_to_hlo.h"],
    deps = [
        "//xla/tsl/platform:statusor",
        "//zkx/hlo/builder:zkx_computation",
        "//zkx/hlo/translate/mhlo_to_hlo:mlir_hlo_to_hlo",
        "//zkx/mlir/utils:error_util",
        "//zkx/mlir_hlo/mhlo/transforms:passes",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:vlog_is_on",
        "@com_google_absl//absl/status",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Transforms",
    ],
)

zkx_cc_library(
    name = "pjrt_client",
    srcs = ["pjrt_client.cc"],
    hdrs = ["pjrt_client.h"],
    deps = [
        ":pjrt_common",
        ":pjrt_compiler",
        ":pjrt_device_description",
        ":pjrt_future",
        ":pjrt_layout",
        "//xla/tsl/framework:allocator",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:literal",
        "//zkx:shape_util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/builder:zkx_computation",
        "//zkx/pjrt/distributed:key_value_store_interface",
        "//zkx/service:computation_placer",
        "//zkx/service:hlo_cost_analysis",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
        "@llvm-project//mlir:IR",
    ],
)

zkx_cc_library(
    name = "pjrt_common",
    hdrs = ["pjrt_common.h"],
    deps = ["//xla/tsl/lib/gtl:int_type"],
)

zkx_cc_library(
    name = "pjrt_compiler",
    srcs = ["pjrt_compiler.cc"],
    hdrs = ["pjrt_compiler.h"],
    deps = [
        ":pjrt_device_description",
        ":pjrt_executable",
        "//xla/tsl/platform:fingerprint",
        "//zkx/hlo/builder:zkx_computation",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/debugging:leak_check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
        "@llvm-project//mlir:IR",
    ],
)

zkx_cc_library(
    name = "pjrt_device_description",
    hdrs = ["pjrt_device_description.h"],
    deps = [
        ":pjrt_common",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "pjrt_executable",
    srcs = ["pjrt_executable.cc"],
    hdrs = ["pjrt_executable.h"],
    deps = [
        ":compile_options_cc_proto",
        ":executable_metadata_cc_proto",
        ":execute_options_cc_proto",
        ":pjrt_common",
        ":pjrt_layout",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:shape_util",
        "//zkx/client:executable_build_options",
        "//zkx/ffi:execution_context",
        "//zkx/hlo/ir:hlo",
        "//zkx/service:buffer_assignment",
        "//zkx/service:compiler",
        "//zkx/service:hlo_cost_analysis",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "pjrt_future",
    srcs = ["pjrt_future.cc"],
    hdrs = ["pjrt_future.h"],
    deps = [
        "//xla/tsl/concurrency:async_value",
        "//xla/tsl/concurrency:ref_count",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:vlog_is_on",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "pjrt_layout",
    hdrs = ["pjrt_layout.h"],
    deps = [
        "//xla/tsl/platform:statusor",
        "//zkx:shape_util",
        "//zkx/hlo/parser:hlo_parser",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "pjrt_stream_executor_client",
    srcs = ["pjrt_stream_executor_client.cc"],
    hdrs = ["pjrt_stream_executor_client.h"],
    deps = [
        ":event_pool",
        ":host_callback",
        ":host_memory_spaces",
        ":local_device_state",
        ":mlir_to_hlo",
        ":pjrt_client",
        ":pjrt_common",
        ":pjrt_compiler",
        ":pjrt_device_description",
        ":pjrt_executable",
        ":pjrt_future",
        ":semaphore",
        ":tracked_device_buffer",
        ":transpose",
        ":utils",
        "//xla/tsl/framework:allocator",
        "//xla/tsl/platform:casts",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:fingerprint",
        "//xla/tsl/platform:mem",
        "//xla/tsl/profiler/lib:connected_traceme",
        "//xla/tsl/profiler/lib:context_types",
        "//xla/tsl/profiler/lib:traceme",
        "//zkx:executable_run_options",
        "//zkx:literal",
        "//zkx:primitive_util",
        "//zkx:shape_tree",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx:zkx_cc_proto",
        "//zkx:zkx_data_cc_proto",
        "//zkx/client:executable_build_options",
        "//zkx/client:local_client",
        "//zkx/hlo/builder:zkx_computation",
        "//zkx/hlo/ir:hlo",
        "//zkx/service:compiler",
        "//zkx/service:computation_layout",
        "//zkx/service:computation_placer",
        "//zkx/service:dump",
        "//zkx/service:executable",
        "//zkx/service:generic_transfer_manager",
        "//zkx/service:hlo_cc_proto",
        "//zkx/service:hlo_cost_analysis",
        "//zkx/service:maybe_owning_device_memory",
        "//zkx/service:shaped_buffer",
        "//zkx/service:transfer_manager",
        "//zkx/service/gpu:gpu_executable_run_options",
        "//zkx/stream_executor",
        "//zkx/stream_executor:device_memory",
        "//zkx/stream_executor:device_memory_allocator",
        "//zkx/stream_executor:stream",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
        "@llvm-project//mlir:IR",
    ],
)

zkx_cc_library(
    name = "pjrt_test_client",
    testonly = True,
    srcs = ["pjrt_test_client.cc"],
    hdrs = ["pjrt_test_client.h"],
    deps = [
        ":pjrt_client",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/debugging:leak_check",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "semaphore",
    srcs = ["semaphore.cc"],
    hdrs = ["semaphore.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "status_casters",
    hdrs = ["status_casters.h"],
    deps = [
        ":exceptions",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "transpose",
    srcs = [
        "transpose.cc",
        "transpose_kernels.h",
    ],
    hdrs = ["transpose.h"],
    deps = [
        ":lru_cache",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//xla/tsl/profiler/lib:traceme",
        "//zkx:compiler_macros",
        "//zkx:permutation_util",
        "//zkx:util",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "utils",
    srcs = ["utils.cc"],
    hdrs = ["utils.h"],
    deps = [
        ":layout_mode",
        "//xla/tsl/platform:cpu_info",
        "//xla/tsl/platform:statusor",
        "//zkx:primitive_util",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:zkx_data_cc_proto",
        "//zkx/client:executable_build_options",
        "//zkx/hlo/builder:zkx_computation",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "//zkx/hlo/ir:hlo_sharding",
        "//zkx/service:computation_placer",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
    ],
)

zkx_cc_library(
    name = "worker_thread",
    srcs = ["worker_thread.cc"],
    hdrs = ["worker_thread.h"],
    deps = [
        "//xla/tsl/platform:env",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_unittest(
    name = "pjrt_unittests",
    srcs = [
        "host_callback_unittest.cc",
        "lru_cache_unittest.cc",
        "pjrt_client_unittest.cc",
        "pjrt_executable_unittest.cc",
        "pjrt_future_unittest.cc",
        "pjrt_stream_executor_client_unittest.cc",
        "semaphore_unittest.cc",
        "tracked_device_buffer_unittest.cc",
        # TODO(chokobole): Uncomment this. Dependency: createStablehloDeserializePipeline
        # "mlir_to_hlo_unittest.cc",
    ],
    deps = [
        ":host_callback",
        ":lru_cache",
        ":pjrt_common",
        ":pjrt_executable",
        ":pjrt_future",
        ":pjrt_stream_executor_client",
        ":semaphore",
        ":tracked_device_buffer",
        "//xla/tsl/platform:status",
        "//xla/tsl/platform:statusor",
        "//zkx:literal_comparison",
        "//zkx:literal_util",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:util",
        "//zkx/client:client_library",
        "//zkx/client:local_client",
        "//zkx/hlo/builder:zkx_builder",
        "//zkx/pjrt/cpu:pjrt_test_client",
        "//zkx/service:cpu_plugin",
        "//zkx/service:platform_util",
        "//zkx/stream_executor",
        "//zkx/stream_executor:platform",
        "//zkx/tests:literal_test_util",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)

# fractal-build-lint: disable=build-test-name
zkx_cc_unittest(
    name = "transpose_unittest",
    timeout = "moderate",
    srcs = ["transpose_unittest.cc"],
    deps = [
        ":transpose",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:status",
        "//xla/tsl/platform:statusor",
        "//zkx:array",
        "//zkx:permutation_util",
        "@eigen_archive//:eigen3",
    ],
)
